examples/programs/invalid/stack_initial_fill_not_first.sst
.version 1
; Invalid: initial_fill must be the first non-constant instruction
; halt is a non-constant instruction before initial_fill

halt
const_loc 0x0000000000000000    ; zone 0, word 0, site 0
initial_fill 1
